--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,45 @@
-version: '3.9'
+version: '3.5'
 
+# Services
 services:
 
-    wordpress:
-        image: wordpress
-        ports:
-            - 8080:80
-        environment:
-            WORDPRESS_DB_HOST: db
-            WORDPRESS_DB_USER: exampleuser
-            WORDPRESS_DB_PASSWORD: examplepass
-            WORDPRESS_DB_NAME: exampledb
-        volumes:
-            - ./public:/var/www/html
+  # PHP FPM Service
+  php:
+    container_name: php
+    build:
+      dockerfile: ./docker/php/dockerfile
+      context: .
+    volumes:
+      - './public/:/var/www/html'
+    depends_on:
+      - mariadb
 
-    db:
-        image: mysql
-        environment:
-            MYSQL_DATABASE: exampledb
-            MYSQL_USER: exampleuser
-            MYSQL_PASSWORD: examplepass
-            MYSQL_RANDOM_ROOT_PASSWORD: '1'
-        volumes:
-            - db:/var/lib/mysql
+  # Nginx Service
+  nginx:
+    container_name: web
+    image: nginx:latest
+    ports:
+      - 8080:80
+    links:
+      - 'php'
+    volumes:
+      - './public/:/var/www/html'
+      - './docker/nginx:/etc/nginx/conf.d'
+    depends_on:
+      - php
 
+  # MariaDB Service
+  mariadb:
+    container_name: db
+    image: mariadb:latest
+    environment:
+      MYSQL_DATABASE: voorbeeld_db
+      MYSQL_USER: db_user
+      MYSQL_PASSWORD: mijn_p@ss#
+      MYSQL_ROOT_PASSWORD: 4dy5qwtrsag#!sad
+    volumes:
+      - './docker/mysqldata:/var/lib/mysql'
+
+# Volumes
 volumes:
-    db: {}
+  mysqldata:
